--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,3 +41,4 @@ jobs:
           name: JUnit Tests            # Name of the check run which will be created
           path: target/surefire-reports/*.xml    # Path to test results
           reporter: java-junit
+          use-actions-summary: 'true'
