--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <!-- Dependency versions -->
         <commons-codec.version>1.17.1</commons-codec.version>
         <commons-lang3.version>3.17.0</commons-lang3.version>
+        <spring-context.version>6.2.0</spring-context.version>
         <assertj.version>3.26.3</assertj.version>
         <junit.version>5.11.3</junit.version>
 
@@ -57,6 +58,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>${commons-lang3.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring-context.version}</version>
         </dependency>
 
         <!-- Test scope -->
