--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,16 +8,12 @@
 
 name: Java CI with Maven
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+on: [ push, pull_request ]
 
 jobs:
   build:
+    name: "Build on JDK 21"
     runs-on: ubuntu-latest
-
     permissions:
       checks: write
 
@@ -32,13 +28,13 @@ jobs:
           cache: maven
 
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+        run: mvn package --batch-mode --no-transfer-progress
 
       - name: Test Report
         uses: dorny/test-reporter@1a288b62f8b75c0f433cbfdbc2e4800fbae50bd7
-        if: success() || failure()    # run this step even if previous step failed
+        if: ${{ !cancelled() }}
         with:
-          name: JUnit Tests            # Name of the check run which will be created
-          path: target/surefire-reports/*.xml    # Path to test results
+          name: JUnit Tests
+          path: target/surefire-reports/*.xml
           reporter: java-junit
           use-actions-summary: 'true'
