--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,7 +12,7 @@ on: [ push, pull_request ]
 
 jobs:
   build:
-    name: "Build on JDK 21"
+    name: "Build and test"
     runs-on: ubuntu-latest
     permissions:
       checks: write
