--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,23 +1,11 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Java CI with Maven
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+on: [ push, pull_request ]
 
 jobs:
   build:
+    name: "Build and test"
     runs-on: ubuntu-latest
-
     permissions:
       checks: write
 
@@ -32,13 +20,13 @@ jobs:
           cache: maven
 
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+        run: mvn package --batch-mode --no-transfer-progress
 
       - name: Test Report
         uses: dorny/test-reporter@1a288b62f8b75c0f433cbfdbc2e4800fbae50bd7
-        if: success() || failure()    # run this step even if previous step failed
+        if: ${{ !cancelled() }}
         with:
-          name: JUnit Tests            # Name of the check run which will be created
-          path: target/surefire-reports/*.xml    # Path to test results
+          name: JUnit Tests
+          path: target/surefire-reports/*.xml
           reporter: java-junit
           use-actions-summary: 'true'
