Testing new action

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,3 +30,20 @@ jobs:
           path: target/surefire-reports/*.xml
           reporter: java-junit
           use-actions-summary: 'true'
+
+  update-readme:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: k2bd/advent-readme-stars@27bfdb5e0e611d0f006356cfe37dbfb505b0ee49
+        with:
+          userId: 4246309
+          #          leaderboardId: 9876543
+          sessionCookie: ${{ secrets.ADVENT_OF_CODE_SESSION }}
+      - uses: stefanzweifel/git-auto-commit-action@8621497c8c39c72f3e2a999a26b4ca1b5058a842
+        with:
+          commit_message: Update README stars
+          branch: feature/advent-stars-test
+          create_branch: true
