Added commit signing

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,3 +30,6 @@ jobs:
           path: target/surefire-reports/*.xml
           reporter: java-junit
           use-actions-summary: 'true'
+
+  update:
+    uses: './github/workflows/update-readme-stars.yml'
