--- a/.github/workflows/update-readme-stars.yml
+++ b/.github/workflows/update-readme-stars.yml
@@ -2,11 +2,12 @@ name: Update README ⭐
 
 on:
   workflow_dispatch:
+  workflow_call:
   schedule:
     - cron: "38 2 * * *" # at 02:38 everyday
 
 jobs:
-  update-readme-stars:
+  update-readme:
     name: "Update README with latest stars"
     runs-on: ubuntu-latest
     permissions:
@@ -31,6 +32,18 @@ jobs:
           sessionCookie: ${{ secrets.ADVENT_OF_CODE_SESSION }}
           year: ${{ env.YEAR_2015 }}
 
+      - name: "Import GPG key"
+        id: import-gpg
+        uses: crazy-max/ghaction-import-gpg@cb9bde2e2525e640591a934b1fd28eef1dcaf5e5 # v6.2.0
+        with:
+          gpg_private_key: ${{ secrets.UPDATE_STARS_BOT_GPG_PRIVATE_KEY }}
+          passphrase: ${{ secrets.UPDATE_STARS_BOT_GPG_PASSPHRASE }}
+          git_user_signingkey: true
+          git_commit_gpgsign: true
+
       - uses: stefanzweifel/git-auto-commit-action@8621497c8c39c72f3e2a999a26b4ca1b5058a842
         with:
           commit_message: Update README with latest stars
+          commit_author: "${{ steps.import-gpg.outputs.name }} <${{ steps.import-gpg.outputs.email }}>"
+          commit_user_name: ${{ steps.import-gpg.outputs.name }}
+          commit_user_email: ${{ steps.import-gpg.outputs.email }}
