--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,3 +30,9 @@ jobs:
           path: target/surefire-reports/*.xml
           reporter: java-junit
           use-actions-summary: 'true'
+
+      - uses: gaelgirodon/ci-badges-action@14c20f94cfdcbb27ce33e8793fa3245c25ddca14
+        #        if: github.event == 'push' && github.ref == 'main'
+        with:
+          gist-id: b215880fcc3b1db343bccd1147ed9c06
+          token: ${{ secrets.CI_BADGES_GIST_TOKEN }}
