--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -43,11 +43,7 @@ jobs:
           coverage_results_path: target/site/jacoco/jacoco.xml
           coverage_report_name: Coverage
           coverage_report_title: JaCoCo
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          skip_check_run: false
-          minimum_coverage: 80
-          fail_below_threshold: false
-          publish_only_summary: false
+          skip_check_run: true
 
       # Publish Coverage Job Summary # Optional
       - name: Add Jacoco report to workflow run summary
