--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,7 +13,6 @@ jobs:
       CI_BADGES_GIST_STAGING: b215880fcc3b1db343bccd1147ed9c06
 
     steps:
-      - run: env
       - uses: actions/checkout@v4
 
       - name: Set up JDK 21
@@ -58,7 +57,7 @@ jobs:
 
       - uses: gaelgirodon/ci-badges-action@14c20f94cfdcbb27ce33e8793fa3245c25ddca14
         env:
-          GIST_ID: ${{ github.event == 'push' && github.ref == 'main' && env.CI_BADGES_GIST || env.CI_BADGES_GIST_STAGING }}
+          GIST_ID: ${{ github.event_name == 'push' && github.ref_name == 'main' && env.CI_BADGES_GIST || env.CI_BADGES_GIST_STAGING }}
         with:
           gist-id: ${{ env.GIST_ID }}
           token: ${{ secrets.CI_BADGES_GIST_TOKEN }}
