Named all actions from workflow

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,19 +13,20 @@ jobs:
       CI_BADGES_GIST_STAGING: b215880fcc3b1db343bccd1147ed9c06
 
     steps:
-      - uses: actions/checkout@v4
+      - name: "Checkout repository"
+        uses: actions/checkout@v4
 
-      - name: Set up JDK 21
+      - name: "Set up JDK 21"
         uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
           cache: maven
 
-      - name: Build with Maven
+      - name: "Build with Maven"
         run: mvn verify --batch-mode --no-transfer-progress
 
-      - name: JUnit Test Report
+      - name: "JUnit test report"
         uses: dorny/test-reporter@1a288b62f8b75c0f433cbfdbc2e4800fbae50bd7
         if: ${{ !cancelled() }}
         with:
@@ -34,7 +35,7 @@ jobs:
           reporter: java-junit
           use-actions-summary: 'true'
 
-      - name: JaCoCo Code Coverage Report
+      - name: "JaCoCo code coverage report"
         id: jacoco_reporter
         uses: PavanMudigonda/jacoco-reporter@4fc6bf270fe893e8dda5467e432253a6961345b8
         if: ${{ !cancelled() }}
@@ -44,7 +45,7 @@ jobs:
           coverage_report_title: JaCoCo
           skip_check_run: true
 
-      - name: Add JaCoCo report to workflow run summary
+      - name: "Add JaCoCo report to workflow run summary"
         if: ${{ steps.jacoco_reporter.outputs.coverage_percentage != '' }}
         run: |
           echo "## Code Coverage" >> $GITHUB_STEP_SUMMARY
@@ -55,11 +56,13 @@ jobs:
           echo "| :x: Number of Lines Missed | ${{ steps.jacoco_reporter.outputs.missed_lines }} |" >> $GITHUB_STEP_SUMMARY
           echo "| Total Number of Lines | ${{ steps.jacoco_reporter.outputs.total_lines }} |" >> $GITHUB_STEP_SUMMARY
 
-      - uses: gaelgirodon/ci-badges-action@14c20f94cfdcbb27ce33e8793fa3245c25ddca14
+      - name: "Update CI badges"
+        uses: gaelgirodon/ci-badges-action@14c20f94cfdcbb27ce33e8793fa3245c25ddca14
         env:
           GIST_ID: ${{ github.event_name == 'push' && github.ref_name == 'main' && env.CI_BADGES_GIST || env.CI_BADGES_GIST_STAGING }}
         with:
           gist-id: ${{ env.GIST_ID }}
           token: ${{ secrets.CI_BADGES_GIST_TOKEN }}
 
-      - uses: kevincobain2000/action-camo-purge@5169e719d6daf0fdbf8d2174f9438f919627aa87
+      - name: "Purge camo cache"
+        uses: kevincobain2000/action-camo-purge@5169e719d6daf0fdbf8d2174f9438f919627aa87
