--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 
         <!-- Dependency versions -->
         <commons-codec.version>1.17.1</commons-codec.version>
+        <gson.version>2.11.0</gson.version>
         <commons-lang3.version>3.17.0</commons-lang3.version>
         <jgrapht-core.version>1.5.2</jgrapht-core.version>
         <spring-context.version>6.2.0</spring-context.version>
@@ -55,6 +56,11 @@
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>${commons-codec.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
