--- a/.github/workflows/update-readme-stars.yml
+++ b/.github/workflows/update-readme-stars.yml
@@ -53,9 +53,9 @@ jobs:
           commit_user_name: ${{ steps.import-gpg.outputs.name }} [bot]
           commit_user_email: ${{ steps.import-gpg.outputs.email }}
 
-      - name: "Run if changes have been detected"
+      - name: "Edit summary if changes have been detected"
         if: steps.auto-commit-action.outputs.changes_detected == 'true'
-        run: echo "📝 Modifications committed with sha ${{ steps.auto-commit-action.outputs.commit_hash }}"
+        run: echo "📝 Modifications committed with sha ${{ steps.auto-commit-action.outputs.commit_hash }}" >> $GITHUB_STEP_SUMMARY
 
       - name: "Purge camo cache"
         uses: kevincobain2000/action-camo-purge@5169e719d6daf0fdbf8d2174f9438f919627aa87
