--- a/pom.xml
+++ b/pom.xml
@@ -25,18 +25,19 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- Dependency versions -->
-        <commons-codec.version>1.17.1</commons-codec.version>
-        <gson.version>2.11.0</gson.version>
-        <commons-lang3.version>3.17.0</commons-lang3.version>
-        <jgrapht-core.version>1.5.2</jgrapht-core.version>
-        <spring-context.version>6.2.0</spring-context.version>
         <assertj.version>3.26.3</assertj.version>
+        <commons-codec.version>1.17.1</commons-codec.version>
+        <commons-lang3.version>3.17.0</commons-lang3.version>
+        <gson.version>2.11.0</gson.version>
+        <jgrapht-core.version>1.5.2</jgrapht-core.version>
         <junit.version>5.11.3</junit.version>
+        <spring-context.version>6.2.0</spring-context.version>
+        <throwing-function.version>1.6.1</throwing-function.version>
 
         <!-- Plugin versions -->
-        <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
-        <maven-failsafe-plugin.version>3.5.2</maven-failsafe-plugin.version>
         <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
+        <maven-failsafe-plugin.version>3.5.2</maven-failsafe-plugin.version>
+        <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -63,6 +64,11 @@
             <version>${gson.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.pivovarit</groupId>
+            <artifactId>throwing-function</artifactId>
+            <version>${throwing-function.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>${commons-lang3.version}</version>
@@ -79,12 +85,6 @@
         </dependency>
 
         <!-- Test scope -->
-        <dependency>
-            <groupId>com.pivovarit</groupId>
-            <artifactId>throwing-function</artifactId>
-            <version>1.6.1</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
