--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,15 +26,8 @@ jobs:
       - name: "Build with Maven"
         run: mvn verify --batch-mode --no-transfer-progress
 
-      - name: "SVG"
-        uses: test-summary/action@31493c76ec9e7aa675f1585d3ed6f1da69269a86
-        if: ${{ !cancelled() }}
-        with:
-          paths: "target/surefire-reports/*.xml"
-          show: "all"
-
       - name: "JUnit test report"
-        uses: dorny/test-reporter@1a288b62f8b75c0f433cbfdbc2e4800fbae50bd7
+        uses: kevin-belellou/fork-dorny-test-reporter@1a288b62f8b75c0f433cbfdbc2e4800fbae50bd7
         if: ${{ !cancelled() }}
         with:
           name: JUnit Tests
