--- a/.github/workflows/update-readme-stars.yml
+++ b/.github/workflows/update-readme-stars.yml
@@ -45,12 +45,13 @@ jobs:
           tableMarker: "<!--- advent_readme_stars 2015 table --->"
 
       - name: "Update 2016 stars array in README.md"
-        uses: k2bd/advent-readme-stars@27bfdb5e0e611d0f006356cfe37dbfb505b0ee49
+        uses: kevin-belellou/fork-k2bd-advent-readme-stars@fb691d31f2e5daf9017d0f774d95fc2f1fba7ef7
         with:
           userId: ${{ env.ADVENT_USER_ID }}
           sessionCookie: ${{ secrets.ADVENT_OF_CODE_SESSION }}
           year: ${{ env.YEAR_2016 }}
           tableMarker: "<!--- advent_readme_stars 2016 table --->"
+          showMissingDays: true
 
       - name: "Import GPG key"
         id: import-gpg
