--- a/.github/workflows/update-readme-stars.yml
+++ b/.github/workflows/update-readme-stars.yml
@@ -37,20 +37,23 @@ jobs:
           starsRegex: '(?<=https:\/\/img\.shields\.io\/badge\/%E2%AD%90_in_2016-)[0-9]+(?=_%2F_50-yellow)'
 
       - name: "Update 2015 stars array in README.md"
-        uses: k2bd/advent-readme-stars@27bfdb5e0e611d0f006356cfe37dbfb505b0ee49
+        uses: kevin-belellou/fork-k2bd-advent-readme-stars@6c9a58a4e39e094bac0e209b30b96c24d7dce5b0
         with:
           userId: ${{ env.ADVENT_USER_ID }}
           sessionCookie: ${{ secrets.ADVENT_OF_CODE_SESSION }}
           year: ${{ env.YEAR_2015 }}
           tableMarker: "<!--- advent_readme_stars 2015 table --->"
+          solutionLocations: "src/main/java/com/belellou/kevin/advent/year{yyyy}/Day{d}.java"
+          showAllMissingDays: false
 
       - name: "Update 2016 stars array in README.md"
-        uses: kevin-belellou/fork-k2bd-advent-readme-stars@f72a0910a6bd0d60a55e74c3fd7081ebb6a360e5
+        uses: kevin-belellou/fork-k2bd-advent-readme-stars@6c9a58a4e39e094bac0e209b30b96c24d7dce5b0
         with:
           userId: ${{ env.ADVENT_USER_ID }}
           sessionCookie: ${{ secrets.ADVENT_OF_CODE_SESSION }}
           year: ${{ env.YEAR_2016 }}
           tableMarker: "<!--- advent_readme_stars 2016 table --->"
+          solutionLocations: "src/main/java/com/belellou/kevin/advent/year{yyyy}/Day{d}.java"
           showAllMissingDays: true
 
       - name: "Import GPG key"
