--- a/.github/workflows/update-readme-stars.yml
+++ b/.github/workflows/update-readme-stars.yml
@@ -37,7 +37,7 @@ jobs:
           starsRegex: '(?<=https:\/\/img\.shields\.io\/badge\/%E2%AD%90_in_2016-)[0-9]+(?=_%2F_50-yellow)'
 
       - name: "Update 2015 stars array in README.md"
-        uses: kevin-belellou/fork-k2bd-advent-readme-stars@6c9a58a4e39e094bac0e209b30b96c24d7dce5b0
+        uses: kevin-belellou/fork-k2bd-advent-readme-stars@df1a0e14eae7581456ff518c67316f9a74bfd37a
         with:
           userId: ${{ env.ADVENT_USER_ID }}
           sessionCookie: ${{ secrets.ADVENT_OF_CODE_SESSION }}
@@ -47,14 +47,14 @@ jobs:
           showMissingDays: true
 
       - name: "Update 2016 stars array in README.md"
-        uses: kevin-belellou/fork-k2bd-advent-readme-stars@6c9a58a4e39e094bac0e209b30b96c24d7dce5b0
+        uses: kevin-belellou/fork-k2bd-advent-readme-stars@df1a0e14eae7581456ff518c67316f9a74bfd37a
         with:
           userId: ${{ env.ADVENT_USER_ID }}
           sessionCookie: ${{ secrets.ADVENT_OF_CODE_SESSION }}
           year: ${{ env.YEAR_2016 }}
           tableMarker: "<!--- advent_readme_stars 2016 table --->"
           solutionLocations: "src/main/java/com/belellou/kevin/advent/year{yyyy}/Day{d}.java"
-          showAllMissingDays: true
+          showMissingDays: true
 
       - name: "Import GPG key"
         id: import-gpg
