--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,13 +14,13 @@ jobs:
 
     steps:
       - name: "Checkout repository"
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4.2.2
 
       - name: "Set up JDK 23"
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v4.7.0
         with:
-          java-version: '23'
-          distribution: 'temurin'
+          java-version: "23"
+          distribution: temurin
           cache: maven
 
       - name: "Build with Maven"
@@ -33,7 +33,7 @@ jobs:
           name: JUnit Tests
           path: target/surefire-reports/*.xml
           reporter: java-junit
-          use-actions-summary: 'true'
+          use-actions-summary: true
 
       - name: "JaCoCo code coverage report"
         id: jacoco_reporter
