--- a/.github/workflows/update-readme-stars.yml
+++ b/.github/workflows/update-readme-stars.yml
@@ -26,7 +26,7 @@ jobs:
           userid: ${{ env.ADVENT_USER_ID }}
           session: ${{ secrets.ADVENT_OF_CODE_SESSION }}
           year: ${{ env.YEAR_2015 }}
-          starsRegex: "(?<=https:\/\/img\.shields\.io\/badge\/%E2%AD%90_in_2015-)[0-9]+(?=_%2F_50-yellow)"
+          starsRegex: '(?<=https:\/\/img\.shields\.io\/badge\/%E2%AD%90_in_2015-)[0-9]+(?=_%2F_50-yellow)'
 
       - name: "Update 2016 stars badges in README.md"
         uses: J0B10/aoc-badges-action@75cd611df531bd9aa0675cae13be418d73cbdf76
@@ -34,7 +34,7 @@ jobs:
           userid: ${{ env.ADVENT_USER_ID }}
           session: ${{ secrets.ADVENT_OF_CODE_SESSION }}
           year: ${{ env.YEAR_2016 }}
-          starsRegex: "(?<=https:\/\/img\.shields\.io\/badge\/%E2%AD%90_in_2016-)[0-9]+(?=_%2F_50-yellow)"
+          starsRegex: '(?<=https:\/\/img\.shields\.io\/badge\/%E2%AD%90_in_2016-)[0-9]+(?=_%2F_50-yellow)'
 
       - name: "Update 2015 stars array in README.md"
         uses: kevin-belellou/fork-k2bd-advent-readme-stars@df1a0e14eae7581456ff518c67316f9a74bfd37a
