--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
         <throwing-function.version>1.6.1</throwing-function.version>
 
         <!-- Plugin versions -->
-        <jacoco-maven-plugin.version>0.8.13-SNAPSHOT</jacoco-maven-plugin.version>
+        <jacoco-maven-plugin.version>0.8.13</jacoco-maven-plugin.version>
         <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
         <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
     </properties>
@@ -56,14 +56,6 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>jacoco-snapshots</id>
-            <name>JaCoCo Snapshots</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </pluginRepository>
-    </pluginRepositories>
 
     <dependencies>
         <dependency>
